--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,4 @@
 [build]
-  command = "npm install && npm run build"  # Adjust this based on your build setup
-  publish = "build"  # Adjust this to your app's build output directory
+command = "npm start"
+publish = "./"
 
-[dev]
-  command = "npm run start"  # Adjust this based on your local development setup
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
